tests/test_assets/semantics/arrays/pass/nested_arrays.cog
matrix: i32[2][3];

matrix[0][0] = 1;
matrix[1][2] = 5;