tests/test_assets/semantics/arrays/fail/initializer_count.cog
a: i32[3] = [1,2];

b: i32[3] = [1,2,3,4];